# trapperkeeper

./: .gitignore  CLAUDE.md  Cargo.toml  buf.gen.yaml  buf.yaml  default.yaml  go.mod  go.sum  tests.yaml
.github/workflows/: ci.yml
adr/: 001-architectural-principles.md  002-sdk-model.md  003-uuid-strategy.md  004-database-backend.md  005-api-service.md  006-service-architecture.md  007-cli-configuration.md  008-web-framework.md  009-operational-endpoints.md  010-database-migrations.md  011-authentication-and-users.md  012-api-authentication.md  014-rule-expression-language.md  015-field-path-resolution.md  016-type-system-and-coercion.md  017-schema-evolution.md  018-rule-lifecycle.md  019-event-schema-and-storage.md  020-client-metadata-namespace.md  021-failure-modes-and-degradation.md  022-sampling-and-performance-optimization.md  023-batch-processing-and-vectorization.md  024-testing-strategy.md  025-binary-distribution.md  CLAUDE.md
cmd/: CLAUDE.md
cmd/trapperkeeper/: CLAUDE.md  main.go
doc/: .markdownlint.yaml  .prettierrc.yaml  CLAUDE.md  Makefile  README.md  error-handling-index.md  observability-index.md  performance-index.md  security-index.md  validation-index.md
doc/01-principles/: CLAUDE.md  README.md  consistent-encoding-identifiers.md  ephemeral-sensors.md  least-intrusive-defaults.md  schema-agnostic-architecture.md  simplicity.md  testing-examples.md  testing-integration-patterns.md  testing-philosophy.md
doc/02-architecture/: CLAUDE.md  README.md  api-service.md  binary-distribution.md  sdk-model.md  service-architecture.md
doc/03-data/: CLAUDE.md  README.md  event-schema-storage.md  identifiers-uuidv7.md  metadata-namespace.md  timestamps.md  timezone-presentation.md
doc/04-rule-engine/: CLAUDE.md  README.md  expression-language.md  field-path-resolution.md  lifecycle.md  schema-evolution.md  type-system-coercion.md
doc/05-performance/: CLAUDE.md  README.md  batch-processing.md  cost-model.md  optimization-strategies.md  sampling.md
doc/06-security/: CLAUDE.md  README.md  authentication-sensor-api.md  authentication-web-ui.md  configuration-security.md  encryption.md  tls-https-strategy.md
doc/07-validation/: CLAUDE.md  (+7 more)
internal/: CLAUDE.md  README.md
migrations/: 20220830171549_epoch.sql  migrations.go
proto/: CLAUDE.md
sdks/: CLAUDE.md
src/: config.rs  crud.rs  crypto.rs  database.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs  web.rs
templates/: _base.html  _head.html  _navbar.html  _sidebar.html  index.html  login.html  overview.html  trapp_create.html  trapp_created.html  trapp_overview.html  trapps.html
tests/: crud_test.rs  database_test.rs  lib.rs  web_test.rs
(+185 files in other folders)
