[package]
name = "trapperkeeper"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = []
generic_const_exprs = []

[dependencies]
diesel = { version = "2.0.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }

actix-web = "4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4"
env_logger = "0.9"
dotenvy = "0.15"
rand = "0.8"
hex = "0.4.3"


[dev-dependencies]
more-asserts = "0.3.0"
rstest = "0.15.0"
ctor = "0.1"
