[package]
name = "trapperkeeper"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = []
generic_const_exprs = []

[dependencies]

# ORM
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "sqlite", "macros", "migrate", "time"] }

# Webserver stuff
actix-web = { version = "4", features = ["cookies"] }
actix-files = "0.6"
actix-utils = "^3"
rust-embed = "6.4"

# Auth / security
jwt = "0.16"
sha2 = "0.10"
hmac = { version = "0.12", features = ["reset"] }

# Templating
handlebars = { version = "4.3", features = ["dir_source", "rust-embed"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment / configuration
config = { version = "0.13", features = ["yaml"] }
env_logger = "0.9"
dotenvy = "0.15"
log = "0.4"

# Utilities
async-trait = "0.1.60"
async-std = { version = "^1.12", features = ["attributes", "tokio1"] }
derive_more = "0.99"
futures-util = "0.3"
lazy_static = "1.1"
rand = "0.8"
hex = "0.4.3"

[dev-dependencies]
more-asserts = "0.3.0"
rstest = "0.15.0"
ctor = "0.1"
